# research_assistant

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  ENTRY_POINTS.md  Makefile  Pipfile  README.md  TESTING.md  UI_README.md  pyproject.toml  pytest.ini  run_cli.ps1  run_tests.ps1  run_ui.ps1  setup.cfg  setup.py  streamlit_test.py
.devcontainer/: devcontainer.json
docs/: CONTRIBUTING.md  PROJECT_STATUS.md  README.md  architecture.md  chroma_ingestion.md  development.md  gemini_integration.md  next_steps.md  rag_gemini_implementation.md  user_guide.md
examples/: gemini_pydantic_ai_example.py  rag_example.py  rag_example_README.md
scripts/: clean_debug.py
src/: __init__.py  main.py
src/hello_world/: __init__.py  dependencies.py  graph.py  nodes.py  state.py
src/hello_world/api/: services.py
src/hello_world/cli/: commands.py
src/hello_world/core/: dependencies.py  graph.py  nodes.py  state.py
src/hello_world/ui/: cli_entry.py
src/research_agent/: __init__.py  __main__.py  main.py
src/research_agent/api/: services.py
src/research_agent/cli/: README.md  __init__.py  commands.py  ingest_documents.py  main.py
tests/: __init__.py  conftest.py  test_gemini_client.py  test_nodes.py  test_services.py
tests/hello_world/: __init__.py  test_cli.py  test_dependencies.py  test_graph.py  test_nodes.py  test_streamlit.py
tests/research_agent/: __init__.py  test_cli.py  test_dependencies.py  test_graph.py  test_graph_utils.py  test_logging_config.py  test_main.py  test_nodes.py  test_rag.py  test_streamlit.py
tests/test_data/: sample.txt
(+53 files in other folders)
